network/vpc/cloudformation/vpc-public-private-subnets-1-nat-per-az.yaml
Resources:
  vpcWith1NatPerAZ:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.2.0.0/16
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
        - Key: Environment
          Value: production
        - Key: Name
          Value: vpc-with-1-nat-per-az
  publicSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpcWith1NatPerAZ
      CidrBlock: 10.2.0.0/19
      AvailabilityZone: "us-east-1a"
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Environment
          Value: production
        - Key: Name
          Value: public-subnet-us-east-1a
  publicSubnet1b:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpcWith1NatPerAZ
      CidrBlock: 10.2.32.0/19
      AvailabilityZone: "us-east-1b"
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Environment
          Value: production
        - Key: Name
          Value: public-subnet-us-east-1b
  publicSubnet1c:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpcWith1NatPerAZ
      CidrBlock: 10.2.64.0/19
      AvailabilityZone: "us-east-1c"
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Environment
          Value: production
        - Key: Name
          Value: public-subnet-us-east-1c
  privateSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpcWith1NatPerAZ
      CidrBlock: 10.2.96.0/19
      AvailabilityZone: "us-east-1a"
      Tags:
        - Key: Environment
          Value: production
        - Key: Name
          Value: private-subnet-us-east-1a
  privateSubnet1b:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpcWith1NatPerAZ
      CidrBlock: 10.2.128.0/19
      AvailabilityZone: "us-east-1b"
      Tags:
        - Key: Environment
          Value: production
        - Key: Name
          Value: private-subnet-us-east-1b
  privateSubnet1c:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref vpcWith1NatPerAZ
      CidrBlock: 10.2.160.0/19
      AvailabilityZone: "us-east-1c"
      Tags:
        - Key: Environment
          Value: production
        - Key: Name
          Value: private-subnet-us-east-1c
  internetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Environment
          Value: production
  elasticIp:
    Type: AWS::EC2::EIP
    Properties:
      Tags:
        - Key: Name
          Value: elastic-ip-1a
  elasticIp1b:
    Type: AWS::EC2::EIP
    Properties:
      Tags:
        - Key: Name
          Value: elastic-ip-1b
  elasticIp1c:
    Type: AWS::EC2::EIP
    Properties:
      Tags:
        - Key: Name
          Value: elastic-ip-1c
  natGateway:
    Type: AWS::EC2::NatGateway
    DependsOn: elasticIp
    Properties:
      AllocationId: !GetAtt elasticIp.AllocationId
      SubnetId: !Ref publicSubnet1a
      Tags:
        - Key: Name
          Value: nat-gateway-1a
  natGateway1b:
    Type: AWS::EC2::NatGateway
    DependsOn: elasticIp1b
    Properties:
      AllocationId: !GetAtt elasticIp1b.AllocationId
      SubnetId: !Ref publicSubnet1b
      Tags:
        - Key: Name
          Value: nat-gateway-1b
  natGateway1c:
    Type: AWS::EC2::NatGateway
    DependsOn: elasticIp1c
    Properties:
      AllocationId: !GetAtt elasticIp1c.AllocationId
      SubnetId: !Ref publicSubnet1c
      Tags:
        - Key: Name
          Value: nat-gateway-1c
  igwVPCAssociation:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref internetGateway
      VpcId: !Ref vpcWith1NatPerAZ
  defaultRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref vpcWith1NatPerAZ
      Tags:
        - Key: Name
          Value: default-route-table
        - Key: Environment
          Value: production
  privateRouteTable1a:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref vpcWith1NatPerAZ
      Tags:
        - Key: Name
          Value: private-route-table-1a
        - Key: Environment
          Value: production
  privateRouteTable1b:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref vpcWith1NatPerAZ
      Tags:
        - Key: Name
          Value: private-route-table-1b
        - Key: Environment
          Value: production
  privateRouteTable1c:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref vpcWith1NatPerAZ
      Tags:
        - Key: Name
          Value: private-route-table-1c
        - Key: Environment
          Value: production
  routeIGW:
    Type: AWS::EC2::Route
    DependsOn: igwVPCAssociation
    Properties:
      RouteTableId: !Ref defaultRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref internetGateway
  routeNatgw1a:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref privateRouteTable1a
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref natGateway
  routeNatgw1b:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref privateRouteTable1b
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref natGateway1b
  routeNatgw1c:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref privateRouteTable1c
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref natGateway1c
  routeTableAssoc1a:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref publicSubnet1a
      RouteTableId: !Ref defaultRouteTable
  routeTableAssoc1b:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref publicSubnet1b
      RouteTableId: !Ref defaultRouteTable
  routeTableAssoc1c:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref publicSubnet1c
      RouteTableId: !Ref defaultRouteTable
  privateRouteTableAssoc1a:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref privateSubnet1a
      RouteTableId: !Ref privateRouteTable1a
  privateRouteTableAssoc1b:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref privateSubnet1b
      RouteTableId: !Ref privateRouteTable1b
  privateRouteTableAssoc1c:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref privateSubnet1c
      RouteTableId: !Ref privateRouteTable1c
